# Project-Hail-Rocky

./: .dockerignore  .env.example  .gitignore  ANALISE_COMPLETA.md  AUTOMATED_DIAGNOSIS.md  CLAUDE.md  DEBUG_AUDIO_FLOW.md  DEV_SETUP.md  DOCKER.md  DOCKER_SETUP.md  Dockerfile  ERROS_QUICK_REFERENCE.md  Makefile  OPENCLAW_INTEGRATION.md  OPENCLAW_TEST_FINDINGS.md  OPENCLAW_TEST_GUIDE.md  PHASE1_TEST_INSTRUCTIONS.md  README.md  README_ANALISE.md  SOLUCOES_CODIGO.md  TESTE_RAPIDO.md  TEST_RESULTS_TEMPLATE.md  debug_output.txt  dev.db  dev.sh  docker-bake.hcl  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  hey_rocky.onnx  hey_rocky.tflite  mcp_config.json  metadata.json  package-lock.json  package.json  server.ts  task.md  vite.config.ts
backend/: Dockerfile  Dockerfile.sandbox  inspect_agent.py  inspect_agent_sigs.py  inspect_llm.py  inspect_llm_class.py  inspect_llm_inst.py  inspect_llm_inst_loop.py  inspect_nvidia.py  inspect_reg_func.py  pyproject.toml  requirements.txt  scratch_test_llm.py  scratch_test_v2.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  brain.py  dashboard.py  ha_handlers.py  memory.py  plugins.py  settings_api.py  skills.py  socket_server.py  socketio_handlers.py  speaker.py  system.py  wakeword.py  webrtc.py
backend/app/bridges/: azure_speaker.py  ha_bridge.py  letta_bridge.py  mcp_bridge.py  pipecat_bridge.py
backend/app/core/: alarm_watcher.py  config.py  discovery.py  (+8 more)
backend/tests/: conftest.py  test_api.py  test_langgraph_brain.py  test_skills.py  test_state_manager.py
(+341 files in other folders)
