[project]
name = "rocky-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "granian>=1.6.0",
    "python-socketio>=5.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "psutil>=5.9.0",
    "orjson>=3.9.0",
    "litellm>=1.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "redis[asyncio]>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.2,<4.0.0",
    "saq>=0.12.0",
    "numpy>=1.24.0",
    "aiortc>=1.8.0",
    "av>=12.0.0",
    "redisvl>=0.3.1",
    "sentence-transformers>=3.0.0",
    "asyncpg>=0.29.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.0.0",
    "uvicorn>=0.20.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
